<resources>
    <string name="app_name">Ejercicio-APP</string>
    <string name="registro_bienvenida">Comienza tu evolución</string>
    <string name="registro_bienvenida_descripcion">Necesitamos algunos datos básicos</string>
    <string name="inicio_bienvenida">Bienvenido de nuevo</string>
    <string name="inicio_bienvenida_descripcion">Introduce tus credenciales para continuar entrenando</string>

    <string name="nombre">Nombre completo</string>
    <string name="Correo">Correo electrónico</string>
    <string name="fecha_nacimiento">FechaNacimiento</string>
    <string name="contrasena">Contraseña</string>
    <string name="peso">Peso (kg)</string>
    <string name="altura">Altura (cm)</string>
    <string name="registrarse">Registrarse</string>
    <string name="sinCuenta">¿Aun no tienes una cuenta?</string>
    <string name="entrar">Entrar</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="buscar_ruitna">Buscar rutina...</string>

    <string name="rutina_hoy">Rutina de hoy</string>
    <string name="iniciar_entrenamiento">Iniciar entrenamiento</string>
    <string name="calendario">Calendario de entrenamiento</string>
    <string name="gestion_rutinas">Gestión de rutinas</string>
    <string name="historial">Historial de entrenamientos</string>
    <string name="sin_rutina_hoy">Sin rutina disponible</string>

    <string name="usuario_registrado">Usuario registrado</string>
    <string name="correo_registrado">El correo ya se encuentra registrado</string>
    <string name="sesion_iniciada">Usuario autenticado</string>
    <string name="credenciales_invalidas">Credenciales incorrectas</string>

    <string name="navegacion_inicio">Inicio</string>
    <string name="navegacion_rutina">Rutina</string>
    <string name="navegacion_calendario">Calendario</string>
    <string name="navegacion_perfil">Perfil</string>

    <string name="rutinas_pantalla">Rutinas registradas</string>


    <string name="nombre_vacio">El nombre no puede estar vacio</string>

    <string name="fecha_nacimiento_vacio">La fecha de nacimiento no puede estar vacia</string>
    <string name="fecha_nacimiento_invalida">La fecha de nacimiento no es valida</string>

    <string name="peso_invalido">El peso no es valido</string>

    <string name="altura_invalida">La altura no es valida</string>

    <string name="correo_invalido">Formato de correo invalido</string>
    <string name="correo_vacio">El correo no puede estar vacio</string>

    <string name="contrasena_vacia">La contraseña no puede estar vacia</string>
</resources>