<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.InicioSesion">


    <LinearLayout
        style="@style/Layout_Main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/textoPresentacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"

                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvTitulo"
                    android:layout_weight="5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Texto_Titulo"
                    android:text="@string/inicio_bienvenida" />

                <include
                    layout="@layout/logo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center" />
            </LinearLayout>


            <TextView
                android:id="@+id/textView2"
                style="@style/Texto_SubTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inicio_bienvenida_descripcion"
                tools:layout_editor_absoluteX="168dp"
                tools:layout_editor_absoluteY="165dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/Correo"
                android:id="@+id/ltCorreo"
                style="@style/Form_InputOutline"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCorreo"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/contrasena"
                android:id="@+id/ltContrasnea"
                style="@style/Form_InputOutline"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:id="@+id/etContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Form_InputOutline"
                    android:text="@string/sinCuenta"
                    />
                <TextView
                    android:id="@+id/registrarse"
                    android:layout_width="wrap_content"
                    android:text="@string/registrarse"
                    style="@style/Form_InputOutline"
                    android:layout_marginLeft="10dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_weight="0"
            style="@style/Form_Button"
            android:id="@+id/btnEntrar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:text="@string/entrar"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>