<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Inicio">


    <LinearLayout
        android:layout_width="match_parent"
        style="@style/Layout_Cabecera"
        android:layout_height="70dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/cabecera"
        >
        <TextView
            style="@style/Texto_Titulo_Cabecera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="inicio"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:id="@+id/svContendio"
        app:layout_constraintBottom_toTopOf="@id/ltBarraNavegacion"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/cabecera">
        <LinearLayout
            style="@style/Layout_Main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                style="@style/Card_Inicio_Entrenamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <LinearLayout
                    style="@style/Layout_Card_Inicio_Entrenamiento"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Texto_Titulo_Resaltado_Card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:text="@string/rutina_hoy" />

                    <TextView
                        style="@style/Texto_Descripcion_Entrenamiento_Card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/sin_rutina_hoy"/>

                    <Button
                        android:visibility="gone"
                        style="@style/Form_Button_Incio_Entrenamiento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/iniciar_entrenamiento" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Card_Inicio_Opcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <GridLayout
                    style="@style/Layout_Card_Inicio_Opcion"
                    android:layout_width="match_parent"
                    android:columnCount="2"
                    android:rowCount="1"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_row="0"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content">
                        <ImageView
                            style="@style/imagen_opcion_inicio"
                            android:src="@drawable/ic_calendario" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_row="0"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        style="@style/Texto_Descripcion_Opcion_Card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calendario" />

                </GridLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Card_Inicio_Opcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <GridLayout
                    android:columnCount="2"
                    android:rowCount="1"
                    style="@style/Layout_Card_Inicio_Opcion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_gravity="center"
                        >

                        <ImageView
                            style="@style/imagen_opcion_inicio"
                            android:src="@drawable/ic_pesa" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        style="@style/Texto_Descripcion_Opcion_Card"
                        android:layout_height="wrap_content"
                        android:text="@string/gestion_rutinas" />

                </GridLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Card_Inicio_Opcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <GridLayout
                    style="@style/Layout_Card_Inicio_Opcion"
                    android:layout_width="match_parent"
                    android:rowCount="1"
                    android:columnCount="2"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content">

                        <ImageView
                            style="@style/imagen_opcion_inicio"
                            android:src="@drawable/ic_historial" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_gravity="center"
                        style="@style/Texto_Descripcion_Opcion_Card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/historial"
                        android:textAlignment="center" />

                </GridLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>
    <GridLayout
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="1"
        android:id="@+id/ltBarraNavegacion"
        style="@style/Layout_Barra_Navegacion"
        android:columnCount="4"
        android:layout_height="100dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_home_inicio"/>
            <TextView
                android:text="@string/navegacion_inicio"
                android:layout_width="wrap_content"
                style="@style/Texto_Navegacion"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_pesa_inicio"/>
            <TextView
                android:text="@string/navegacion_rutina"
                android:layout_width="wrap_content"
                style="@style/Texto_Navegacion"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_calendario_inicio"/>
            <TextView
                android:text="@string/navegacion_calendario"
                android:layout_width="wrap_content"
                style="@style/Texto_Navegacion"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_perfil_inicio"/>
            <TextView
                android:text="@string/navegacion_perfil"
                android:layout_width="wrap_content"
                style="@style/Texto_Navegacion"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>